--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "yjjapp",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"description": "一个连接讲端和听端，催化各类互动环节的演讲应用",
 	"main": "app.js",
 	"author": "3dobe",
@@ -11,6 +11,7 @@
 		"taffydb": "2.7.2"
 	},
 	"devDependencies": {
-		"request": "2.27.0"
+		"bufferhelper": "*",
+        "iconv-lite": "*"
 	}
 }
