--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"taffydb": "2.7.2"
 	},
 	"devDependencies": {
-		"bufferhelper": "*",
-        "iconv-lite": "*"
+		"bufferhelper": "0.2.0",
+        "iconv-lite": "0.2.11"
 	}
 }
