--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 ﻿{
 	"name": "yjjapp",
-	"version": "0.0.5",
+	"version": "0.0.6",
 	"description": "一个连接讲端和听端，催化各类互动环节的演讲应用",
 	"main": "app.js",
 	"author": "3dobe",
@@ -8,7 +8,8 @@
 		"underscore": "1.4.4",
 		"express": "3.4.0",
 		"taffydb": "2.7.2",
-		"chance": "0.4.3"
+		"chance": "0.4.3",
+        "mime": "1.2.11"
 	},
 	"devDependencies": {
 		"bufferhelper": "0.2.0",
