--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
 		"underscore": "1.4.4",
 		"express": "3.4.0",
 		"taffydb": "2.7.2",
-		"chance": "0.4.3",
-        "mime": "1.2.11"
+		"chance": "0.4.3"
 	},
 	"devDependencies": {
 		"bufferhelper": "0.2.0",
